[package]
name = "pokedraft-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.195"
surrealdb = {path = "../surrealdb/lib", version = "1.1.0"}

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "fast-rng", "macro-diagnostics"]