[package]
name = "pokedraft-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.1", features = ["json"]}
serde = "1.0.195"
surrealdb = {version = "2.1.4"}

[dependencies.uuid]
version = "1.13.1"
features = ["v4", "fast-rng", "macro-diagnostics"]
